...
        The Starks are an ancient house descended from Bran the Builder, a legendary figure from the Age of Heroes said to have raised their ancestral home at Winterfell thousands of years in the past, as well as the Wall. They are descendants of the First Men[1] and still follow some of their ancient traditions and the old gods of the forest. The Starks were Kings of Winter in the North for thous

The ancient Starks gradually defeated rival kings, such as the Barrow Kings to their south and the Red Kings to their east.[4] For several millennia, the Starks were not the uncontested Kings in the North, but their primary antagonists, the Boltons of the Dreadfort, swore fealty some 1,000 years ago, ending their flesh-flaying ways. Meanwhile, King Jon Stark drove pirates from the White Knife, and
    </string>

    <!--House Lannister-->
    <string name="house_lannister">House Lannister</string>
    <string name="lannister_background">House Lannister of Casterly Rock is one of the Great Houses of Seven Kingdoms, and the principal house of the westerlands. Their seat is Casterly Rock, though another branch exists that is based in nearby Lannisport. Their sigil is a golden lion on a field of crimson.[1] Their official motto is "Hear Me Roar!" However, their unofficial motto, equally well kn

Fair-haired, tall, and handsome, the Lannisters are the blood of Andal adventurers who carved out a mighty kingdom in the western hills and valleys. Through the female line they boast of descent from Lann the Clever, the legendary trickster of the Age of Heroes who tricked the members of House Casterly into giving him Casterly Rock[4] during the era of the First Men.[5]

The Lannisters reigned as Kings of the Rock until they fell to the Targaryen conquest, but were allowed to remain the liege lords of the westerlands. The House had fallen on hard times during the rule of Lord Tytos, but was restored to its former glory by Lord Tywin. His daughter Cersei is the queen of King Robert I Baratheon, while her twin Ser Jaime is a knight of Robert\'s Kingsguard. Members o
    <string name="lannister_history">The Lannisters suddenly appear as First Men in historical records of the Age of Heroes, ruling large portions of the westerlands from Casterly Rock just as the Casterlys vanished from the chronicles. They claim descent from Lann the Clever, the legendary figure who tricked the Casterlys from their seat, Casterly Rock.[5]
...
